--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,7 @@
         <configuration>
           <failsOnError>true</failsOnError>
           <configLocation>checkstyle.xml</configLocation>
+          <consoleOutput>true</consoleOutput>
         </configuration>
         <executions>
           <execution>
