--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,9 @@
   <inceptionYear>2012</inceptionYear>
 
   <scm>
-    <url>http://git.squareup.com/square/squash_java</url>
-    <connection>scm:git:git://git.squareup.com/square/squash_java.git</connection>
-    <developerConnection>scg:git:git@git.squareup.com/square/squash_java.git</developerConnection>
+    <url>https://github.com/SquareSquash/java</url>
+    <connection>scm:git:git://github.com/SquareSquash/java.git</connection>
+    <developerConnection>scg:git:git@github.com/SquareSquash/java.git</developerConnection>
   </scm>
 
   <organization>
@@ -33,7 +33,7 @@
 
   <issueManagement>
     <system>GitHub Issues</system>
-    <url>http://github.com/square/squash_java/issues</url>
+    <url>https://github.com/SquareSquash/java/issues</url>
   </issueManagement>
 
   <licenses>
@@ -47,7 +47,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-    <java.version>1.6</java.version>
+    <java.version>1.5</java.version>
     <junit.version>4.10</junit.version>
     <fest.version>1.4</fest.version>
     <mockito.version>1.8.5</mockito.version>
